fix(web): fix text overflow for long peer title in toolbar and profile view;

--- a/apps/actor-web/styles/activity.scss
+++ b/apps/actor-web/styles/activity.scss
@@ -50,6 +50,8 @@
       text-align: center;
       font-weight: 600;
       color: $toolbarTextColor;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
     &__list {
       padding: 0;
